# ppbar

./: .gitignore  readme.txt
annihilation/: CMakeLists.txt  annihilate.cc  fit.cc  ppbar_parameters.txt  ppbartest.cc
annihilation/figs/: plotCF.py
doc/: coalescence_vs_hbt.aux  coalescence_vs_hbt.out  coalescence_vs_hbt.tex  header.tex
karinarun/hbt/: CMakeLists.txt  exercise.cc  gausscompare_parallel  gausscompare_parallel.cc  hbt_gausscompare.cc  parameters_gauss.txt  plot.py  psicheck.cc  test.cc
karinarun/hbt/parameters/: parameters_pp.txt
scottrun/: CMakeLists.txt  hydro_parameters.txt  read3dhydro.cc
scottrun/hbt/: CMakeLists.txt  gausscompare_parallel.cc  hbt_fromsmash.cc  hbt_gauss.cc  hbt_gausscompare.cc  hbt_ppbar.cc  parameters.txt  parameters_dircut.txt  parameters_gauss.txt  parameters_pn.txt  parameters_pp.txt  parameters_qcut.txt  parameters_scott.txt
scottrun/hbt/figs/: plotCF.py
scottrun/hbt/parameters/: parameters.txt  parameters_gauss.txt  parameters_pn_gauss.txt  parameters_pn_smash.txt  parameters_pp.txt  parameters_pp_gaussonly.txt
scottrun/hbt/run/: sampler_and_smash
scottrun/hbt/run/logfiles/: ss_0.txt  ss_1.txt  ss_10.txt  ss_12.txt  ss_13.txt  ss_16.txt  ss_5.txt  ss_6.txt
scottrun/runhbt/: parameters.txt
scottrun/runss/: bigrunner_ss.sh  hydrodata  runner_ss.sh
scottrun/runss/config/: ppbar.yaml
scottrun/runss/logfiles/: ss_11.txt  ss_14.txt  ss_15.txt  ss_17.txt  ss_18.txt  ss_19.txt  ss_2.txt  ss_20.txt  ss_21.txt  ss_22.txt  ss_23.txt  ss_3.txt  ss_4.txt  ss_7.txt  ss_8.txt  ss_9.txt
software/: CMakeLists.txt
software/include/: hbt_bes.h
software/src/: CF.cc  ReadWriteStuff.cc  WriteStuff.cc  anal_hbt.cc  bayes.cc  calc_CF.cc  calc_CF_parallel.cc  calc_Cf.cc.old  hbt_bes.cc  part.cc  spectra.cc
